# bevy_splash_screen

./: Cargo.toml  README.md  default.nix  flake.nix  release.toml  rust-toolchain.toml
examples/: custom_skip.rs  layouts.rs  screens.rs  simple.rs
src/: lens.rs  lib.rs  splash.rs  systems.rs
