[package]
name = "bevy_splash_screen"
description = "A plugin for bevy which allows you to create screens to show the brands and development teams behind your amazing game"
version = "0.4.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/bevy_splash_screen"
keywords = ["gamedev", "ui", "bevy"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = ["multi-threaded", "bevy_asset", "bevy_winit", "bevy_render", "bevy_sprite", "png"] }

[dependencies]
bevy = { version = "0.11", default-features = false }
bevy_tweening = "0.8"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/SergioRibera/bevy_tweening", branch = "infinite_mirrored" }
