[package]
name = "bevy_splash_screen"
description = "A plugin for bevy which allows you to create screens to show the brands and development teams behind your amazing game"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SergioRibera/bevy_splash_screen"
keywords = ["gamedev", "ui", "bevy"]

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "multi-threaded",
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "png",
] }

[features]
default = []
dev = [
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/multi-threaded",
    "bevy/png",
    "bevy/ktx2",
    "bevy/x11",
    "bevy/bevy_gizmos",
    "bevy/default_font",
]

[[example]]
name = "custom_skip"
required-features = ["dev"]
path = "./examples/custom_skip.rs"

[[example]]
name = "layouts"
required-features = ["dev"]
path = "./examples/layouts.rs"

[[example]]
name = "screens"
required-features = ["dev"]
path = "./examples/screens.rs"

[[example]]
name = "simple"
required-features = ["dev"]
path = "./examples/simple.rs"

[dependencies]
bevy = { version = "0.12", default-features = false }
bevy_tweening = "0.9"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/SergioRibera/bevy_tweening", branch = "infinite_mirrored" }
